# NatalChartBot

./: .gitignore  README.md  admin.py  bot.py  calculator.py  database.py  love_ai.py  mc_loader.py  payments.py  pdf_generator.py  pyproject.toml  states.py  texts.py
db/: schema.sql
source/ascendant/: ascendant.json
source/aspects/: conjunction.json  opposition.json  sextile.json  square.json  trine.json
source/houses/: house_1.json  house_10.json  house_11.json  house_12.json  house_2.json  house_3.json  house_4.json  house_5.json  house_6.json  house_7.json  house_8.json  house_9.json
source/mc/: aquarius.json  aries.json  cancer.json  capricorn.json  gemini.json  leo.json  libra.json  pisces.json  sagittarius.json  scorpio.json  taurus.json  virgo.json
source/planets/: jupiter.json  mars.json  mercury.json  moon.json  neptune.json  pluto.json  saturn.json  sun.json  uranus.json  venus.json
